# axum_sandbox

./: .gitignore  Cargo.toml  README.md  package.json  vite.config.js
docs/: axum.md  cookie.md  database.md  diesel.md  error.md  examples.md  html.md  log.md
src/: adminapi.rs  authapi.rs  create_database.sql  database.rs  dieseltask.rs  index.html  index.jsx  main.rs  sqlxtask.rs  testfn.rs  todolist.rs
src/components/: App.jsx
src/components/auth/: AuthProvider.jsx  signin.jsx  signout.jsx  signup.jsx
src/components/pages/: Account.jsx  Home.jsx  LabTest.jsx
src/components/task/: task.jsx
src/html/: access.html
static/: access.js  index.html
static/components/: app.js
static/components/auth/: forgot.js  signin.js  signup.js
static/components/todolist/: todolist.js
webdesign/: task.md
