[package]
name = "axum_sandbox"
version = "0.1.0"
edition = "2021"

#[profile.dev]
#opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
strip = true #automatically strip symbols from binary
opt-level = "s" # optimize for size
lto = true #enabl link time optimizations
codegen-units = 1 # maximize size reducation optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"  # Web framework that focuses on ergonomics and modularity.
tokio = { version = "1.25", features=["full"] } # Event-driven, non-blocking I/O platform.
serde = { version = "1", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "1" # Serde serializion/deserialization of JSON data.
#http = "0.2" # Types for HTTP requests and responses.
#tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors","fs"] }
tower-cookies = "0.8"
#markup = "0.13.1" # template engine
tracing = "0.1" #  Application-level tracing for Rust.
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]} # Utilities for implementing and composing `tracing` subscribers. 
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
jsonwebtoken = "8.2.0"
dotenv = "0.15.0"



